# todo-app-rs-htmx

./: Cargo.toml  README.md
src/: item.rs  main.rs  response.rs  server.rs  todo.rs
static/: cert.crt  cert.key
